--- a/Monitoreo/Views/Home/Index.cshtml
+++ b/Monitoreo/Views/Home/Index.cshtml
@@ -190,25 +190,35 @@
                     <p><a style="background-color:#2f4f4f; border-style:none;" class="btn btn-info" href="~/Reporte">Ver más &raquo;</a></p>
                 </div>
             </div>
-            <div class="row">
-                <div class="panel">
+            <div class="row" style="margin-top:20px;">
+
+                    <div class="col-md-3 hvr-pop" style="text-align: center;">
+                        <i class="fa fa-share-alt-square" style="font-size: 4em; color:#FFA500;margin-left:auto;margin-right:auto;"></i>
+                        <h3 style="color:black">Mis Acompañamientos</h3>
+                        @*<p style="text-align: center;color:black">Reporte de Horas cursadas por Ciclo Formativo y Centro Educativo</p>*@
+                        <p><a style="background-color:#2f4f4f; border-style:none;" class="btn btn-info" href="~/InscripcionActividadAcompanamiento/MisInscripcionesAcompanamiento">Ver más &raquo;</a></p>
+                    </div>
+
+                    <div class="col-md-3 hvr-pop" style="text-align: center;">
+                        <i class="fa fa-calendar" style="font-size: 4em; color:#1569C7;margin-left:auto;margin-right:auto;"></i>
+                        <h3 style="color:black">Acompañamientos por fecha</h3>
+                        <p><a style="background-color:#2f4f4f; border-style:none;" class="btn btn-info" href="~/InscripcionActividadAcompanamiento/InscripcionesPorFecha">Ver más &raquo;</a></p>
+                    </div>
+
+               
                     <div class="col-md-3 hvr-pop" style="text-align: center;">
                         <i class="fa fa-tachometer" style="font-size: 4em; color:#2f4f4f;margin-left:auto;margin-right:auto;"></i>
                         <h3 style="color:black">Reportes de Asistencia de Ciclos Formativos</h3>
                         @*<p style="text-align: center;color:black">Reporte de Horas cursadas por Ciclo Formativo y Centro Educativo</p>*@
                         <p><a style="background-color:#2f4f4f; border-style:none;" class="btn btn-info" href="~/Reporte/ReporteAsistenciaByCiclo">Ver más &raquo;</a></p>
                     </div>
-                </div>
 
-
-                <div class="panel">
                     <div class="col-md-3 hvr-pop" style="text-align: center;">
                         <i class="fa fa-line-chart" style="font-size: 4em; color:green;margin-left:auto;margin-right:auto;"></i>
                         <h3 style="color:black">Reportes de Formularios Acompanamiento</h3>
                         @*<p style="text-align: center;color:black">Reporte de Horas cursadas por Ciclo Formativo y Centro Educativo</p>*@
                         <p><a style="background-color:#2f4f4f; border-style:none;" class="btn btn-info" href="~/Reporte/ReporteEvaluacionesByCiclo">Ver más &raquo;</a></p>
-                    </div>
-                </div>
+                    </div>               
             </div>
 
 
