emails y isActive ademas de responsiveness

--- a/Monitoreo/Views/CicloFormativo/CicloInscripcionesBatch.cshtml
+++ b/Monitoreo/Views/CicloFormativo/CicloInscripcionesBatch.cshtml
@@ -104,6 +104,7 @@
                             success: function (data) {
                                 if(data == "OK"){
                                     $("#msjPanel").text("Docentes Inscritos Satisfactoriamente!");
+                                    $("form").attr('action', '/CicloFormativo/Details?id=@Model.Id').off('submit').submit();
                                 }
                                 if(data == "ERROR"){
                                     $("#msjPanel").text("Ha ocurrido un error inscribiendo Docentes...")
