--- a/Monitoreo/Views/Acompanante/AcompananteDocentes.cshtml
+++ b/Monitoreo/Views/Acompanante/AcompananteDocentes.cshtml
@@ -11,16 +11,20 @@
     }
 </style>
 
-<script src="https://cdn.datatables.net/1.10.9/js/jquery.dataTables.min.js"></script>
+<link href="~/Content/css/jquery.dataTables.min.css" rel="stylesheet" />
+<link href="~/Content/css/responsive.dataTables.min.css" rel="stylesheet" />
+
+<script src="~/Content/js/jquery.dataTables.min.js"></script>
 <script src="~/Scripts/jquery.dataTables.columnFilter.js"></script>
 
+<script src="~/Content/js/dataTables.responsive.min.js"></script>
 
 <div class="panel-heading">
     <h3>Docentes del Centro @ViewBag.Centro</h3>
 </div>
 
 <div class="panel-body">
-    <table id="dataTable" class="table table-bordered table-striped table-hover">
+    <table id="dataTable" class="display responsive nowrap">
         <thead>
             <tr>
                 <th>
@@ -108,6 +112,8 @@
         </tfoot>
     </table>
 </div>
+
+
 
 @*<div class="panel-footer">
         <a href="@Url.Action("Create","Docente")" class="btn btn-default">
