Crea automaticamente actividades  de acompanamiento cuando se crea el superCicloFormativo

--- a/Monitoreo/Views/Docente/DocenteDetailsCoordinadorInicial.cshtml
+++ b/Monitoreo/Views/Docente/DocenteDetailsCoordinadorInicial.cshtml
@@ -191,8 +191,8 @@ SuperCicloFormativoId
         </table>
     </div>
     <div>
-        <button id="addActividadPresencial" type="button" class="btn btn-success">Inscribir</button>
-        <button id="removeActividadPresencial" type="button" class="btn btn-danger" onclick=''>Desinscribir</button>
+        <button id="addActividadPresencial" type="button" class="btn btn-success" disabled>Inscribir</button>
+        <button id="removeActividadPresencial" type="button" class="btn btn-danger" onclick='' disabled>Desinscribir</button>
     </div>
 </div>
 <div class="panel-footer">
