--- a/Monitoreo/Views/PersonalAdministrativo/PersonalAdministrativoDetailsAcompanante.cshtml
+++ b/Monitoreo/Views/PersonalAdministrativo/PersonalAdministrativoDetailsAcompanante.cshtml
@@ -1,4 +1,5 @@
-﻿@model Monitoreo.Models.BO.ViewModels.DocenteDetailsAcompananteVM
+﻿
+@model Monitoreo.Models.BO.ViewModels.DocenteDetailsAcompananteVM
 <style>
     .comment-list .row {
         margin-bottom: 0px;
@@ -421,7 +422,7 @@
 </div>
 
 <div class="modal fade" id="CreateModal" tabindex="-1" role="dialog" aria-labelledby="CreateModal" aria-hidden="true">
-    <div class="modal-dialog" >
+    <div class="modal-dialog">
         <div class="modal-content" style="max-width:600px;">
             <div class="modal-body" id="modalBody" style="max-width:400px;">
             </div>
@@ -948,5 +949,7 @@
 
     </script>
 }
+
+
 
 
