--- a/Monitoreo/Views/Acompanante/AcompanantePersonalAdministrativo.cshtml
+++ b/Monitoreo/Views/Acompanante/AcompanantePersonalAdministrativo.cshtml
@@ -53,7 +53,7 @@
                     </td>
                    
                     <td class="row-actions">
-                        <a href="@Url.Action("DocenteDetailsAcompanante", "Docente", new { id = item.Id })" class="btn btn-default">
+                        <a href="@Url.Action("PersonalAdministrativoDetailsAcompanante", "PersonalAdministrativo", new { id = item.Id })" class="btn btn-default">
                             <span class="glyphicon glyphicon-list" aria-hidden="true"></span> @Resources.T.ResourceManager.GetString("Detalles")
                         </a>
 
