--- a/Monitoreo/Views/Emails/EmailActividadAcompanamiento.cshtml
+++ b/Monitoreo/Views/Emails/EmailActividadAcompanamiento.cshtml
@@ -24,6 +24,9 @@
             <h3>Fecha: @ViewBag.fecha</h3>
             <h3>Horas: @ViewBag.horas</h3>
             <h3>Area: @ViewBag.area</h3>
+            <h3>Grado: @ViewBag.grado</h3>
+            <h3>Comentarios: @ViewBag.comentario</h3>
+          
         </div>
     </div>
     <p style=""> Esta solicitud fue enviada a las @DateTime.Now</p>
