--- a/Monitoreo/Views/Home/Index.cshtml
+++ b/Monitoreo/Views/Home/Index.cshtml
@@ -342,45 +342,100 @@
 
         <div class="row">
 
-            <div class="col-xs-3 hvr-pop" style="text-align: center;">
+            <div class="col-xs-4 hvr-pop" style="text-align: center;">
                 <i class="fa fa-retweet" style="font-size: 4em; color:#BF00FF;margin-left:auto;margin-right:auto;"></i>
                 <h3 style="color:black;font-size: 2.7vmin;">Ciclos Formativos</h3>
                 <p style="text-align: center;color:black">Aqui se manejan crean y administran los Ciclos Formativos </p>
                 <p><a class="btn btn-success" style="background-color:#BF00FF; border-style:none;" href="~/SuperCiclosFormativos">Ver más &raquo;</a></p>
             </div>
 
-            <div class="col-xs-3 hvr-pop" style="text-align: center;">
+            <div class="col-xs-4 hvr-pop" style="text-align: center;" id="centroIconId">
+                <i class="fa fa-user-secret" style="font-size: 4em; color:black;margin-left:auto;margin-right:auto;"></i>
+                <h3 style="color:black;font-size: 2.7vmin;">Docentes</h3>
+                <p style="text-align: center;color:black">Aqui se administran los Docentes de los centros</p>
+                <p><a class="btn btn-primary" href="~/Docentes">Ver más &raquo;</a></p>
+            </div>
+
+            <div class="col-xs-4 hvr-pop" style="text-align: center;" id="centroIconId">
+                <i class="fa fa-forumbee" style="font-size: 4em; color:black;margin-left:auto;margin-right:auto;"></i>
+                <h3 style="color:black;font-size: 2.7vmin;">Acompañantes</h3>
+                <p style="text-align: center;color:black">Aqui se administran los acompañantes</p>
+                <p><a class="btn btn-primary" href="~/Acompanante">Ver más &raquo;</a></p>
+            </div>
+           
+
+
+         
+        </div>
+
+        <div class="row">
+
+            <div class="col-xs-4 hvr-pop" style="text-align: center;" id="centroIconId">
+                <i class="fa fa-sitemap" style="font-size: 4em; color:black;margin-left:auto;margin-right:auto;"></i>
+                <h3 style="color:black;font-size: 2.7vmin;">Coordinadores</h3>
+                <p style="text-align: center;color:black">Aqui se administran los coordinadores de red</p>
+                <p><a class="btn btn-primary" href="~/Coordinador">Ver más &raquo;</a></p>
+            </div>
+            <div class="col-xs-4 hvr-pop" style="text-align: center;">
+                <i class="fa fa-connectdevelop" style="font-size: 4em; color:#c9302c;margin-left:auto;margin-right:auto;"></i>
+                <h3 style="color:black;font-size: 2.7vmin;">Redes Educativas</h3>
+                <p style="text-align: center;color:black">Aqui se crean y administran las Redes Educativas</p>
+                <p><a class="btn btn-danger" href="~/Redes">Ver más &raquo;</a></p>
+            </div>
+
+
+            <div class="col-xs-4 hvr-pop" style="text-align: center;" id="centroIconId">
+                <i class="fa fa-building-o" style="font-size: 4em; color:#286090;margin-left:auto;margin-right:auto;"></i>
+                <h3 style="color:black;font-size: 2.7vmin;">Centros Educativos</h3>
+                <p style="text-align: center;color:black">Aqui se maneja tanto el personal administrativo, docentes y estudiantes que conforman el Centro Educativo</p>
+                <p><a class="btn btn-primary" href="~/Centros">Ver más &raquo;</a></p>
+            </div>
+
+
+
+        </div>
+        
+        
+        
+        
+        
+        <div class="row">
+
+            <div class="col-xs-4 hvr-pop" style="text-align: center;">
                 <i class="fa fa-bar-chart" style="font-size: 4em; color:#2f4f4f;margin-left:auto;margin-right:auto;"></i>
                 <h3 style="color:black;font-size: 2.7vmin;">Reportes Básicos</h3>
                 <p style="text-align: center;color:black">Visualización de reportes básicos..</p>
                 <p><a style="background-color:#2f4f4f; border-style:none;" class="btn btn-info" href="/Reporte">Ver más &raquo;</a></p>
             </div>
-
-
-            <div class="col-xs-3 hvr-pop" style="text-align: center;">
+            <div class="col-xs-4 hvr-pop" style="text-align: center;">
                 <i class="fa fa-tachometer" style="font-size: 4em; color:#2f4f4f;margin-left:auto;margin-right:auto;"></i>
                 <h3 style="color:black;font-size: 2.7vmin;">Reportes de Asistencia</h3>
                 <p><a class="btn btn-warning" href="/Reporte/ReporteAsistenciaByCiclo">Ver más &raquo;</a></p>
             </div>
 
-        </div>
-
-        <div class="row">
-            <div class="col-xs-3 hvr-pop" style="text-align: center;">
+            <div class="col-xs-4 hvr-pop" style="text-align: center;">
                 <i class="fa fa-bar-chart" style="font-size: 4em; color:#2f4f4f;margin-left:auto;margin-right:auto;"></i>
                 <h3 style="color:black;font-size: 2.7vmin;">Reportes de Evluaciones</h3>
                 <p><a style="background-color:#2f4f4f; border-style:none;" class="btn btn-info" href="/Reporte/ReporteEvaluacionesByCiclo">Ver más &raquo;</a></p>
             </div>
 
-
-            <div class="col-xs-3 hvr-pop" style="text-align: center;">
+        </div>
+        
+        <div class="row">
+            <div class="col-xs-4 hvr-pop" style="text-align: center;">
                 <i class="fa fa-pie-chart" style="font-size: 4em; color:blue;margin-left:auto;margin-right:auto;"></i>
                 <h3 style="color:black">Resumen Formularios Acompanamiento</h3>
                 <p><a style="background-color:#2f4f4f; border-style:none;" class="btn btn-info" href="/Reporte/ResumenEvalsAcompanamiento">Ver más &raquo;</a></p>
             </div>
-           
+
+            <div class="col-xs-4 hvr-pop" style="text-align: center;">
+                <i class="fa fa-calendar" style="font-size: 4em; color:#1569C7;margin-left:auto;margin-right:auto;"></i>
+                <h3 style="color:black;font-size: 2.7vmin;">Acompañamientos por fecha</h3>
+                <p><a style="background-color:#2f4f4f; border-style:none;" class="btn btn-info" href="~/InscripcionActividadAcompanamiento/InscripcionesPorFecha">Ver más &raquo;</a></p>
+            </div>
 
         </div>
+        
 
 
     }
