--- a/Monitoreo/Views/InscripcionActividadAcompanamiento/InscripcionesPorFecha.cshtml
+++ b/Monitoreo/Views/InscripcionActividadAcompanamiento/InscripcionesPorFecha.cshtml
@@ -46,7 +46,7 @@
                 <input id="fechaFinal" type="text" class="form-control" />
             </div>
         </div>
-        @if (ViewBag.centroID == 0)
+        @if (ViewBag.centroList != null)
         {
             <div class="form-group">
                 <div class="col-sm-4">
