--- a/Monitoreo/Views/Persona/Create.cshtml
+++ b/Monitoreo/Views/Persona/Create.cshtml
@@ -49,6 +49,7 @@
             @Html.EditorFor(model => model.Nombres)
             @Html.EditorFor(model => model.PrimerApellido)
             @Html.EditorFor(model => model.SegundoApellido)
+            @Html.EditorFor(model => model.mail)
             @Html.EditorFor(model => model.FechaNacimiento)
             @Html.EditorFor(model => model.LugarNacimiento)
             @Html.EditorFor(model => model.Sexo)
