--- a/Monitoreo/Views/Docente/DocentesFilterByCriteria.cshtml
+++ b/Monitoreo/Views/Docente/DocentesFilterByCriteria.cshtml
@@ -73,6 +73,16 @@
                 @Html.DropDownList("gradoId", (IEnumerable<SelectListItem>)ViewBag.Gradolist, new { @class = "form-control", @id = "gradoId", @name = "gradoId", multiple = "multiple" })
             </div>
         </div>
+        <div class="form-group" id="chkIsActive">
+            @Html.Label("Inscribir Docentes Que Participan en los Ciclos?", new { @class = "control-label col-sm-3" })
+            <div class="col-sm-4">
+               <input type="checkbox" id="isActive"   name="isActive" class="form-control" checked/>
+            </div>
+        </div>
+
+
+
+
 
     </div>
 
@@ -128,7 +138,8 @@
 
         $("#btnSubmit").on('click', function () {
             $("#loadingDiv").show();
-
+            var isActiveDocentes = $("#isActive").is(":checked");
+            console.log("Inscribir docentes " + isActiveDocentes);
             //Centros Seleccionados
             var centrosIDs = [];
             $(selectedCentros).each(function (index) {
@@ -149,7 +160,7 @@
             $.ajax({
                 type: "POST",
                 url: '@Url.Action("GetDocenteByCentrosAreasGrados", "Docente")',
-                data: JSON.stringify({ centrosIds: centrosIDs, areasIds: areasIDs, gradosIDs: gradosIDs }),
+                data: JSON.stringify({ centrosIds: centrosIDs, areasIds: areasIDs, gradosIDs: gradosIDs, isActive: isActiveDocentes }),
                 contentType: "application/json; charset=utf-8",
                 dataType: "json",
                 success: function (data) {
@@ -185,6 +196,7 @@
         $("#centroDiv").hide();
         $("#areaDiv").hide();
         $("#gradoDiv").hide();
+        $("#chkIsActive").hide();
         $("#btnSubmit").hide();
 
         $('#centrosId').multiselect({
@@ -264,7 +276,7 @@
                             $("#areaDiv").show();
                             $("#gradoDiv").show();
                             $("#btnSubmit").show();
-
+                            $("#chkIsActive").show();
 
                         }
                     });
